feat: only fetch data when user press enter key

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "icon": "Eudic.png",
   "author": "isfeng",
   "license": "MIT",
-  "contributors": [],
+  "contributors": [
+    "storm_spirit"
+  ],
   "commands": [
     {
       "name": "easydict",
